# dishbot

./: Dockerfile  README.md  Robotic dishwashing with vision and 3D reconstruction - Claude.mhtml  docker-compose.yml  pyproject.toml
configs/: default.yaml
docker/: entrypoint.sh
src/dishbot/: __init__.py  config.py  grasp_planning.py  isaac_sim_env.py  main.py  robot_controller.py  training_pipeline.py  vision_module.py
src/dishbot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  test_grasp_planning.py  test_vision_module.py
