[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dishbot"
version = "0.1.0"
description = "Robotic dishwashing system with vision and 3D reconstruction"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "DishBot Team"}
]
keywords = ["robotics", "computer-vision", "3d-reconstruction", "manipulation", "isaac-sim"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
]

dependencies = [
    # Note: PyTorch must be installed separately before installing this package.
    # See README.md for installation instructions.
    # PyTorch does NOT support PyPy - CPython 3.10+ is required.
    
    # Deep Learning & Vision (torch/torchvision installed separately)
    "transformers>=4.37.0",
    "qwen-vl-utils>=0.0.8",
    "accelerate>=0.25.0",
    
    # 3D Processing
    "open3d>=0.18.0",
    "trimesh>=4.0.0",
    "scipy>=1.11.0",
    
    # Image Processing
    "opencv-python>=4.8.0",
    "Pillow>=10.0.0",
    
    # Numerical & Scientific
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    
    # Configuration & Utilities
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "omegaconf>=2.3.0",
    "hydra-core>=1.3.0",
    
    # Logging & Progress
    "tqdm>=4.66.0",
    "rich>=13.0.0",
    "loguru>=0.7.0",
    
    # Data Handling
    "h5py>=3.10.0",
    "pandas>=2.1.0",
]

[project.optional-dependencies]
isaac-sim = [
    # Isaac Sim dependencies are typically installed via Omniverse
    # These are placeholder packages for development without Isaac Sim
    "isaacsim>=4.0.0; platform_system=='Linux'",
]

ros = [
    "rclpy>=3.0.0",
    "sensor_msgs>=0.0.1",
    "geometry_msgs>=0.0.1",
]

dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.12.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.6.0",
]

visualization = [
    "matplotlib>=3.8.0",
    "plotly>=5.18.0",
    "wandb>=0.16.0",
    "tensorboard>=2.15.0",
]

all = [
    "dishbot[dev,visualization]",
]

[project.scripts]
dishbot = "dishbot.main:main"

[project.urls]
Homepage = "https://github.com/dishbot/dishbot"
Documentation = "https://github.com/dishbot/dishbot#readme"
Repository = "https://github.com/dishbot/dishbot"
Issues = "https://github.com/dishbot/dishbot/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 100
target-version = ['py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.isort]
known-first-party = ["dishbot"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/dishbot"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
